feat: add blue/green deployment with zero-downtime rebuilds